<resources>
    <string name="app_name">OCP_APP</string>
    <string name="active_your_account">Active Your Account</string>
    <string name="if_you_are_a_new_worker_and_this_is_the_first_time_to_use_this_system_please_active_yo"> ->  if you are a new worker and this is the first time to use this system please active your account</string>
    <string name="login">Login</string>
    <string name="reset_password">Forgot Password ?</string>
    <string name="password">Password</string>
    <string name="identificatin">Identificatin</string>
    <string name="rcar_matricule">RCAR / Matricule</string>
    <string name="birthday">Birthday</string>
    <string name="new_password">New password</string>
    <string name="confirmer_your_password">Confirmer your password</string>
    <string name="confirmer">CONFIRMER</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="welcome_to_ocp_service">WELCOME TO OCP SERVICE</string>
    <string name="please_complet_the_template_bellow_to_active_the_account_and_be_our_controler">Please register and enter the information in the fields to activate your account as a monitor affiliated with our company.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="active_now">Active Now</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_active">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="matricule">Matricule</string>
    <string name="next">Next</string>
    <string name="by_clicking_on_the_button_above">by clicking on the button above!?</string>
    <string name="go_back_to_the_first_page">Go Back to The first Page</string>
    <string name="todo">TODO</string>
    <string name="change">CHANGE</string>
    <string name="demand">DEMAND</string>
    <string name="responsabilite">Responsabilite</string>
    <string name="phone_number_partieactione">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="go_to_the_login_page">Go To The Login Page</string>
    <string name="accuel_page">Accuel Page</string>
    <string name="changement">CHANGE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demand_the_product">Demand The Product,</string>
    <string name="phonenumber">Phone Number</string>
    <string name="demand_de_changement">Change Demand,</string>
    <string name="ocp_d">OCP Maroc stands for Office Chérifien des Phosphates in French. In English, it translates to Cherifian Phosphate Office.</string>
    <string name="text">you can order and change from this </string>
    <string name="textc">application all the type of product</string>
    <string name="welcome">Welcome,</string>
    <string name="close_the_page">Log out</string>
    <string name="fullname">Full Name</string>
    <string name="escpace_approvisionement">Escpace Approvisionement</string>
    <string name="passwordapp">Password</string>
    <string name="phonenumberap">Phone Number</string>
    <string name="full_nameadd">Full Name</string>
    <string name="escpace_administrateur">Escpace Administrateur</string>
    <string name="cancel">Cancel</string>
    <string name="escpace_administrateurad">Escpace Administrateur</string>
    <string name="escpace_approvisionementap">Escpace Approvisionement</string>
    <string name="escpace_user">Escpace User</string>
    <string name="adpassword">Password</string>
    <string name="cancelapp">Cancel</string>
    <string name="log_in">Log In</string>
    <string name="Cphonenumber">Phone Number</string>
    <string name="Tconfirm">CONFIRM</string>
    <string name="Tannuler">ANNULER</string>
    <string name="livraison_phase">Livraison Phase,</string>
    <string name="validation_phase">Validation Phase,</string>
    <string name="description">Description</string>
    <string name="id_ticket">ID_Ticket</string>
    <string name="producttype">ProductType</string>
    <string name="type_agent">Type Agent</string>
</resources>