<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ocpbackground"
    tools:context=".MainActivity2_resetpassword">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/t_500x300"
            android:layout_gravity="center"/>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sty"
        style="@style/costum_card_view_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:cardElevation="20dp">


            <LinearLayout
                android:layout_width="385dp"
                android:layout_height="match_parent"
                android:layout_below="@id/header"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="25dp"
                android:paddingRight="25dp">

            <TextView
                android:id="@+id/textreset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reset_your_password"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Rmatricule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:textColorHint="#898686"
                android:backgroundTint="@color/greey"
                android:hint="@string/rcar_matricule"
                android:maxLength="7"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Rpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="#898686"
                android:backgroundTint="@color/greey"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Rconfirmepassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="#898686"
                android:backgroundTint="@color/greey"
                android:hint="@string/confirmer_your_password"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Rcomfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/green"
                android:letterSpacing="0.1"
                android:padding="12dp"
                android:text="@string/confirmer"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/Rbacktext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/go_back_to_the_first_page"
                android:textAlignment="center"
                android:textColor="@color/green_2d"
                android:textSize="19sp"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>