<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgreen"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ocp_image"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:src="@drawable/th"
        android:foregroundGravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/escpaceuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escpace_user"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/ocp_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/ronder_corner"
        android:backgroundTint="#EDEDED"
        android:paddingBottom="1dp"
        app:layout_constraintTop_toBottomOf="@id/escpaceuser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="40dp">

        <EditText
            android:id="@+id/Umatricule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rcar_matricule"
            android:padding="15dp"
            android:maxLength="7"
            android:background="@drawable/ronder_corner"
            android:backgroundTint="@color/white"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textColorHint="#898686"
            android:layout_margin="20dp" />

        <EditText
            android:id="@+id/Upassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="15dp"
            android:inputType="textPassword"
            android:background="@drawable/ronder_corner"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:textColorHint="#898686"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="1dp" />

        <TextView
            android:id="@+id/Uresetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp" />

        <Button
            android:id="@+id/Ulogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="24sp"
            android:textStyle="bold"
            android:backgroundTint="#57D131"
            android:textColor="@color/white"
            android:layout_margin="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/Uactive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/active_your_account"
        android:textSize="22sp"
        android:padding="10dp"
        android:backgroundTint="#57D131"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/LL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="60dp" />

    <TextView
        android:id="@+id/Uecspaceadministrateur"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/escpace_administrateurad"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/ronder_corner2"
        android:textColor="@color/green_2d"
        android:backgroundTint="@color/white"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/Uactive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="60dp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/UescpaceApprovissionement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/escpace_approvisionementap"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/ronder_corner2"
        android:textColor="@color/green_2d"
        android:backgroundTint="@color/white"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/Uecspaceadministrateur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="60dp"
        android:padding="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>